test/files/neg/t512.check
t512.scala:3: error: not found: value something
    val xxx = something ||
              ^
one error found
